# llm-service

./: README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps.py
app/api/routes/: chat.py
app/core/: config.py  logging.py  security.py
app/data/docs/: company.txt
app/schemas/: chat.py
app/services/: cerebras_client.py  rag.py  vectorstore.py
data/chroma/: chroma.sqlite3
llm_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: build_index.py
tests/: test_health.py
